--- a/TODO
+++ b/TODO
@@ -1,13 +1,6 @@
-* Use Build.PL instead of Makefile.PL. (?)
-
 * Make 'expand_always', 'expand_cb' directives.
 
-* Build a non-unit test of the homepage and perl-begin.
-
-* Upload an initial version (marked with _) to CPAN in order to
-"liqbo'a uvdoth bashetakh".
-
-* Restore the abs_url directive only as use_abs_url or whatever.
+* Restore the abs_url directive only as url_type or whatever.
 
 * Add an option to link to the pages as:
 
@@ -17,10 +10,18 @@
 
 3. By fully qualified URLs (http://www.mysite.org/hoola/hello/world/yes.html)
 
-* Make the module support URLs with CGI GET parameters properly.
-
 * Write the "SEE ALSO" section of the POD document. (cover the other
 similar modules)
 
 * Write full documentation for the module.
 
+Long-Term:
+----------
+
+* Use Build.PL instead of Makefile.PL. (?)
+
+* Make the module support URLs with CGI GET parameters properly.
+
+* Add support for more attributes other than class="" to the ul and li
+tags.
+    - like id=""
