--- a/TODO
+++ b/TODO
@@ -1,6 +1,11 @@
-* Make 'expand_always', 'expand_cb' directives.
+* Make the syntax of the navigation menus more sane ("label" or "text" 
+instead of "value", etc.) That would break compatibility.
+
+* Write the predicate class and assign it to 'expand' and possibly other
+places where it's appropriate.
 
 * Restore the abs_url directive only as url_type or whatever.
+    - Add a url_type accessor to LeadingPath::Component.
 
 * Add an option to link to the pages as:
 
@@ -9,9 +14,6 @@
 2. By site-abs URLs (/hoola/hello/world/yes.html)
 
 3. By fully qualified URLs (http://www.mysite.org/hoola/hello/world/yes.html)
-
-* Write the "SEE ALSO" section of the POD document. (cover the other
-similar modules)
 
 * Write full documentation for the module.
 
@@ -25,3 +27,7 @@ Long-Term:
 * Add support for more attributes other than class="" to the ul and li
 tags.
     - like id=""
+
+* Add a host-based regexp arbitrator to the predicate:
+    { 'host_re' => { 't2' => "^home/", 'vipe' => "^home2/" } }
+
