--- a/TODO
+++ b/TODO
@@ -1,9 +1,3 @@
-* Make the syntax of the navigation menus more sane ("label" or "text" 
-instead of "value", etc.) That would break compatibility.
-
-* Write the predicate class and assign it to 'expand' and possibly other
-places where it's appropriate.
-
 * Restore the abs_url directive only as url_type or whatever.
     - Add a url_type accessor to LeadingPath::Component.
 
@@ -30,4 +24,9 @@ tags.
 
 * Add a host-based regexp arbitrator to the predicate:
     { 'host_re' => { 't2' => "^home/", 'vipe' => "^home2/" } }
+
+* Write more tests with a selective 'expand' directive that expands in one
+path and doesn't expand in others.
+    - test more expand types.
+
 
