Import of SHLOMIF/HTML-Widgets-NavMenu-1.0300 from CPAN.
gitpan-cpan-distribution: HTML-Widgets-NavMenu
gitpan-cpan-version:      1.0300
gitpan-cpan-path:         SHLOMIF/HTML-Widgets-NavMenu-1.0300.tar.gz
gitpan-cpan-author:       SHLOMIF
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,16 @@
 Revision history for Perl extension Shlomif::NavMenu.
 
+1.0300    Sun Jun 14 13:57:09 IDT 2009
+    - Refactoring: Made HTML::Widgets::NavMenu::Object a sub-class of 
+    Class::Accessor to remove many "use base" calls to it.
+    - In progress - converting a flat %args hash (splatted into the @_)
+    into a single $args hash-ref.
+    - Removed a use lib "." from HTML::Widgets::NavMenu - it's a leftover
+    statement that could be a subtle bug.
+    - Refactoring: converted direct $self->{'field'} accesses to
+    accessors. (from all the classes).
+    - Fixed a bug with the HeaderRole where an empty <ul> was created.
+
 1.0201    Fri Mar 28 17:46:59 IDT 2008
     - Fixed a case where a non-capturing expand in a node inside a
     capturing expand caused the upper node to be non-capturing too.
